[gd_scene load_steps=3 format=3 uid="uid://dwc3ru41yhi48"]

[ext_resource type="Script" uid="uid://rcc7iq6cxjyb" path="res://Scripts/Scenes/CodeEditor.gd" id="2_kxsw7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5wy5u"]
bg_color = Color(0.14902, 0.223529, 0.929412, 1)

[node name="CodeEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextEdit" type="CodeEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/background_color = Color(0.14902, 0.223529, 0.929412, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/line_number_color = Color(0.650128, 0.650128, 0.650128, 1)
context_menu_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1
autowrap_mode = 1
indent_wrapped_lines = true
caret_blink = true
caret_multiple = false
gutters_draw_line_numbers = true
delimiter_strings = Array[String]([])
auto_brace_completion_pairs = {}
script = ExtResource("2_kxsw7")

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 20)
layout_mode = 2
focus_mode = 0
mouse_filter = 2
theme_override_colors/font_uneditable_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/read_only = SubResource("StyleBoxFlat_5wy5u")
alignment = 2
editable = false
context_menu_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true

[node name="AutoSave" type="Timer" parent="."]
wait_time = 300.0

[connection signal="caret_changed" from="MarginContainer/VBoxContainer/TextEdit" to="MarginContainer/VBoxContainer/TextEdit" method="_on_caret_changed"]
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/TextEdit" to="MarginContainer/VBoxContainer/TextEdit" method="_on_focus_entered"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/TextEdit" to="MarginContainer/VBoxContainer/TextEdit" method="_on_text_changed"]
[connection signal="tree_exiting" from="MarginContainer/VBoxContainer/TextEdit" to="MarginContainer/VBoxContainer/TextEdit" method="_on_tree_exiting"]
[connection signal="editing_toggled" from="MarginContainer/VBoxContainer/LineEdit" to="MarginContainer/VBoxContainer/TextEdit" method="_on_line_edit_editing_toggled"]
[connection signal="focus_exited" from="MarginContainer/VBoxContainer/LineEdit" to="MarginContainer/VBoxContainer/TextEdit" method="_on_line_edit_focus_exited"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/LineEdit" to="MarginContainer/VBoxContainer/TextEdit" method="_on_line_edit_gui_input"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/LineEdit" to="MarginContainer/VBoxContainer/TextEdit" method="_on_line_edit_text_submitted"]
[connection signal="timeout" from="AutoSave" to="MarginContainer/VBoxContainer/TextEdit" method="_on_auto_save_timeout"]
